Added analysis. Cleaned up loose ends

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -7,14 +7,18 @@
    "source": [
     "# PyCity Schools Analysis\n",
     "\n",
-    "- Your analysis here\n",
+    "Trends found in data:\n",
+    "- Charter schools have a higher overall passing rate than District schools\n",
+    "- Large schools (2000-5000 students) have a lower passing rate than Small and Medium-sized schools.\n",
+    "- Reading scores are generally higher than math scores regardless of school type - District or Charter.\n",
+    "- Spending ranges per student are inversely correlated with overall passing scores.\n",
     "  \n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +146,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +187,7 @@
        "15"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +210,7 @@
        "39170"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +232,7 @@
        "24649428"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +255,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +277,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +299,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +322,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +347,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +421,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +482,7 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +520,7 @@
        "Name: size, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,32 +544,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "school_name\n",
-       "Bailey High School       77.048432\n",
-       "Cabrera High School      83.061895\n",
-       "Figueroa High School     76.711767\n",
-       "Ford High School         77.102592\n",
-       "Griffin High School      83.351499\n",
-       "Hernandez High School    77.289752\n",
-       "Holden High School       83.803279\n",
-       "Huang High School        76.629414\n",
-       "Johnson High School      77.072464\n",
-       "Pena High School         83.839917\n",
-       "Rodriguez High School    76.842711\n",
-       "Shelton High School      83.359455\n",
-       "Thomas High School       83.418349\n",
-       "Wilson High School       83.274201\n",
-       "Wright High School       83.682222\n",
-       "Name: math_score, dtype: float64"
+       "Bailey High School       81.033963\n",
+       "Cabrera High School      83.975780\n",
+       "Figueroa High School     81.158020\n",
+       "Ford High School         80.746258\n",
+       "Griffin High School      83.816757\n",
+       "Hernandez High School    80.934412\n",
+       "Holden High School       83.814988\n",
+       "Huang High School        81.182722\n",
+       "Johnson High School      80.966394\n",
+       "Pena High School         84.044699\n",
+       "Rodriguez High School    80.744686\n",
+       "Shelton High School      83.725724\n",
+       "Thomas High School       83.848930\n",
+       "Wilson High School       83.989488\n",
+       "Wright High School       83.955000\n",
+       "Name: reading_score, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,13 +577,12 @@
    "source": [
     "# Calculate the average test scores per school from school_data_complete\n",
     "per_school_math = school_data_complete.groupby(['school_name'])['math_score'].mean()\n",
-    "per_school_reading = school_data_complete.groupby(['school_name'])['reading_score'].mean()\n",
-    "per_school_math"
+    "per_school_reading = school_data_complete.groupby(['school_name'])['reading_score'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +607,7 @@
        "Name: math_score, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +646,7 @@
        "Name: math_score, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +685,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +726,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1031,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1200,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1350,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1529,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1568,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1730,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1770,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1781,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1791,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2117,7 @@
        "Wright High School                            <$585  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2133,13 +2136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "#  Calculate averages for the desired columns.\n",
     "# modified premade groupby statements by adding observed=True parameter\n",
-    "# per documentation: \"observed\" parameter shows only observed values for categorical groupers if true\n",
+    "# per documentation: \"observed\" parameter shows only observed values for categorical groupers (aka bins) if true\n",
     "# all values for \"Spending Ranges (Per Student)\" should all be within the bins we just set, so setting observed=True stops me from getting FutureError\n",
     "spending_math_scores = school_spending_df.groupby([\"Spending Ranges (Per Student)\"], observed=True)[\"Average Math Score\"].mean()\n",
     "spending_reading_scores = school_spending_df.groupby([\"Spending Ranges (Per Student)\"], observed=True)[\"Average Reading Score\"].mean()\n",
@@ -2150,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2249,7 +2252,7 @@
        "$645-680                               53.526855  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2277,7 +2280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2620,30 +2623,28 @@
     "# Categorize the spending based on the bins\n",
     "# Use `pd.cut` on the \"Total Students\" column of the `per_school_summary` DataFrame.\n",
     "\n",
-    "per_school_summary[\"School Size\"] =\n",
+    "per_school_summary[\"School Size\"] = pd.cut(per_school_summary['Total Students'], size_bins, labels=labels)\n",
     "per_school_summary\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate averages for the desired columns.\n",
-    "size_math_scores = per_school_summary.groupby([\"School Size\"])[\"Average Math Score\"].mean()\n",
-    "size_reading_scores = per_school_summary.groupby([\"School Size\"])[\"Average Reading Score\"].mean()\n",
-    "size_passing_math = per_school_summary.groupby([\"School Size\"])[\"% Passing Math\"].mean()\n",
-    "size_passing_reading = per_school_summary.groupby([\"School Size\"])[\"% Passing Reading\"].mean()\n",
-    "size_overall_passing = per_school_summary.groupby([\"School Size\"])[\"% Overall Passing\"].mean()\n"
+    "size_math_scores = per_school_summary.groupby([\"School Size\"], observed=True)[\"Average Math Score\"].mean()\n",
+    "size_reading_scores = per_school_summary.groupby([\"School Size\"], observed=True)[\"Average Reading Score\"].mean()\n",
+    "size_passing_math = per_school_summary.groupby([\"School Size\"], observed=True)[\"% Passing Math\"].mean()\n",
+    "size_passing_reading = per_school_summary.groupby([\"School Size\"], observed=True)[\"% Passing Reading\"].mean()\n",
+    "size_overall_passing = per_school_summary.groupby([\"School Size\"], observed=True)[\"% Overall Passing\"].mean()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2724,7 +2725,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2732,7 +2733,13 @@
    "source": [
     "# Create a DataFrame called `size_summary` that breaks down school performance based on school size (small, medium, or large).\n",
     "# Use the scores above to create a new DataFrame called `size_summary`\n",
-    "size_summary =\n",
+    "size_summary = pd.DataFrame({\n",
+    "    'Average Math Score' : size_math_scores,\n",
+    "    'Average Reading Score' : size_reading_scores,\n",
+    "    '% Passing Math' : size_passing_math,\n",
+    "    '% Passing Reading' : size_passing_reading,\n",
+    "    '% Overall Passing' : size_overall_passing\n",
+    "})\n",
     "\n",
     "# Display results\n",
     "size_summary\n"
@@ -2747,7 +2754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2761,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2833,14 +2840,20 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Assemble the new data by type into a DataFrame called `type_summary`\n",
-    "type_summary =\n",
+    "type_summary = pd.DataFrame({\n",
+    "    'Average Math Score' : average_math_score_by_type,\n",
+    "    'Average Reading Score' : average_reading_score_by_type,\n",
+    "    '% Passing Math' : average_percent_passing_math_by_type,\n",
+    "    '% Passing Reading' : average_percent_passing_reading_by_type,\n",
+    "    '% Overall Passing' : average_percent_overall_passing_by_type\n",
+    "})\n",
     "\n",
     "# Display results\n",
     "type_summary\n"
