Updated README.md and included minor changes

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -8,10 +8,10 @@
     "# PyCity Schools Analysis\n",
     "\n",
     "Trends found in data:\n",
-    "- Charter schools have a higher overall passing rate than District schools\n",
+    "- Charter schools have a higher overall passing rate than District schools.\n",
     "- Large schools (2000-5000 students) have a lower passing rate than Small and Medium-sized schools.\n",
     "- Reading scores are generally higher than math scores regardless of school type - District or Charter.\n",
-    "- Spending ranges per student are inversely correlated with overall passing scores.\n",
+    "- Spending per student are inversely correlated with overall passing scores.\n",
     "  \n",
     "---"
    ]
